documents/topic_26647/page_0.txt
AliSci | 2024-01-14 10:55:46 UTC | #1

#    SyntaxError: Cannot use import statement outside a module

```

ts-jest[backports] (WARN) "[jest-config].globals.ts-jest.tsConfig" is deprecated, use "[jest-config].globals.ts-jest.tsconfig" instead.
ts-jest[backports] (WARN) Your Jest configuration is outdated. Use the CLI to help migrating it: ts-jest config:migrate <config-file>.
 FAIL  src/frontend/tests/React/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /Users/ahmed/Desktop/odoc/src/declarations/user_canister/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import { Actor, HttpAgent } from "@dfinity/agent";
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      1 |
      2 |
    > 3 | import {canisterId as userCanisterId, idlFactory} from "../../declarations/user_canister/index";
        | ^
      4 | import {canisterId as identityCanisterId} from "../../declarations/internet_identity/index";
      5 | import {AuthClient} from "@dfinity/auth-client";
      6 | import {Actor, HttpAgent} from "@dfinity/agent";

      at Runtime.createScriptFromCode (node_modules/jest-config/node_modules/jest-runtime/build/index.js:1505:14)
      at Object.<anonymous> (src/frontend/backend_connect/ic_agent.ts:3:1)
      at Object.<anonymous> (src/frontend/backend_connect/main.ts:1:1)
      at Object.<anonymous> (src/frontend/redux/files.ts:2:1)
      at Object.<anonymous> (src/frontend/redux/main.ts:3:1)
      at Object.<anonymous> (src/frontend/components/contracts/shares_contract.tsx:5:1)
      at Object.<anonymous> (src/frontend/tests/React/App.test.tsx:4:1)

```

my code https://github.com/aliscie/odoc/tree/unit-test

I thought it could be related to decorations and using .d.ts files but I tried to 
```tsconfig.json
"include": [
    "src/**/*.ts",
    "src/**/*.d.ts"
  ],
```
and 
```jest.config.js
moduleNameMapper: {
        '^@/(.*)\\.d$': './src/$1.d.ts',
        '\\.(gif|ttf|eot|svg|png)$': './fileMock.js',
        '\\.css$': 'identity-obj-proxy',
        '^@app/(.*)$': './$1',
    },
```
and that did not work as well. any other ideas pleas?

-------------------------

